@@ -62,6 +62,7 @@ static const char args_doc[] = N_("[MAN DATABASE]");
 static const char doc[] = "\v" N_("The man database defaults to %s%s.");
 
 static struct argp_option options[] = {
+	{ "debug",	'd',	0,	0,	N_("emit debugging messages") },
 	{ 0, 'h', 0, OPTION_HIDDEN, 0 }, /* compatibility for --help */
 	{ 0 }
 };
@@ -69,6 +70,9 @@ static struct argp_option options[] = {
 static error_t parse_opt (int key, char *arg, struct argp_state *state)
 {
 	switch (key) {
+		case 'd':
+			debug_level = 1;
+			return 0;
 		case 'h':
 			argp_state_help (state, state->out_stream,
 					 ARGP_HELP_STD_HELP);
