@@ -61,6 +61,9 @@ Major changes since man-db 2.5.0:
 	  -S, and permits sections to be comma-separated as well as
 	  colon-separated.
 
+	o All programs, except the obsolete 'wrapper', now accept a --debug
+	  option. (accessdb, lexgrog, and zsoelim were lacking it.)
+
 man-db 2.5.0 (7 October 2007)
 =============================
 
