@@ -1,3 +1,10 @@
+Mon Jan  7 01:14:39 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* src/accessdb.c (options, parse_opt): Accept -d/--debug.
+	* src/lexgrog_test.c (options, parse_opt): Likewise.
+	* src/zsoelim.l (options, parse_opt): Likewise.
+	* docs/NEWS: Document this.
+
 Mon Jan  7 01:08:39 GMT 2008  Colin Watson  <cjwatson@debian.org>
 
 	* src/zsoelim.l (options): Fix incorrect description of -C.
